--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Joseph Quinto</h1><br>
         <h1> Nairovis Garcia</h1><br>
+        <h1>Jefferson Durango</h1>
     </body>
 </html>
