--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <h1>Joseph Quinto</h1><br>
         <h1> Nairovis Garcia</h1><br>
         <h1>Jefferson Durango</h1>
+        <h1>Santiago Madera</h1>
     </body>
 </html>
